--- a/src/app/inspection/edit/inspection.edit.component.html
+++ b/src/app/inspection/edit/inspection.edit.component.html
@@ -1,1 +1,129 @@
-<h2>inspection.edit</h2>
+<div class="inspection-edit">
+  <div class="header-section">
+    <h2>
+      <mat-icon aria-label="Access to the screen for Associated Findings">create</mat-icon>
+      <span>Inspection Edition</span>
+    </h2>
+  </div>
+
+  <div class="inspection-edit-container">
+    <div class="row">
+      <div class="col">
+        <mat-form-field class="full-width">
+          <input matInput [matDatepicker]="startingDatePicker" placeholder="Starting Date" [formControl]="startingDate">
+          <mat-datepicker-toggle matSuffix [for]="startingDatePicker"></mat-datepicker-toggle>
+          <mat-datepicker #startingDatePicker></mat-datepicker>
+        </mat-form-field>
+      </div>
+
+      <div class="col">
+        <mat-form-field class="full-width">
+          <input matInput [matDatepicker]="expectedEndDatePicker" placeholder="Expected End Date" [formControl]="expectedEndDate">
+          <mat-datepicker-toggle matSuffix [for]="expectedEndDatePicker"></mat-datepicker-toggle>
+          <mat-datepicker #expectedEndDatePicker></mat-datepicker>
+        </mat-form-field>
+      </div>
+
+      <div class="col">
+        <mat-form-field class="full-width">
+          <mat-select placeholder="Status" [(value)]="status">
+            <mat-option *ngFor="let statusItem of statusList" [value]="statusItem">
+              {{ statusItem }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+
+      <div class="col">
+        <mat-form-field class="full-width">
+          <input matInput [matDatepicker]="reportDatePicker" placeholder="Report Date" [formControl]="reportDate">
+          <mat-datepicker-toggle matSuffix [for]="reportDatePicker"></mat-datepicker-toggle>
+          <mat-datepicker #reportDatePicker></mat-datepicker>
+        </mat-form-field>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <span class="inspection-result-label">
+          <label>Inspection Result</label>
+        </span>
+        <button mat-button [matMenuTriggerFor]="menu">
+          <span *ngIf="!inspectionResult">N/A</span>
+          <div *ngIf="inspectionResult" [ngClass]="['result-icon', 'status-' + inspectionResult]"></div>
+        </button>
+        <mat-menu #menu="matMenu">
+          <button mat-menu-item *ngFor="let result of inspectionResultsList" (click)="updateResult(result)">
+            <div [ngClass]="['result-icon', 'status-' + result]"></div>
+          </button>
+        </mat-menu>
+      </div>
+
+      <div class="col">
+        <mat-form-field class="full-width">
+          <input matInput placeholder="Degree of Implementation" type="number" [(ngModel)]="degree"/>
+        </mat-form-field>
+      </div>
+
+      <div class="col">
+        <mat-form-field class="full-width">
+          <mat-select placeholder="Degree of Progress" [(value)]="degreeOfProcess">
+            <mat-option *ngFor="let progress of progressList" [value]="progress">
+              {{ progress }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+
+      <div class="col">
+        <mat-form-field class="full-width">
+          <mat-select placeholder="Owner" [(value)]="owner">
+            <mat-option *ngFor="let owner of ownerList" [value]="owner">
+              {{ owner }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col">
+        <mat-form-field class="full-width">
+          <mat-select placeholder="Finding" [(value)]="finding">
+            <mat-option *ngFor="let finding of [true, false]" [value]="finding">
+              {{ finding ? 'Yes' : 'No' }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+
+      <div class="col">
+        <mat-form-field class="full-width">
+          <mat-select placeholder="Category" [(value)]="category">
+            <mat-option *ngFor="let category of categoryList" [value]="category">
+              {{ category }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+
+      <div class="col"></div>
+      <div class="col"></div>
+    </div>
+
+    <div class="row">
+      <div class="col">
+        <mat-form-field class="full-width">
+          <textarea matInput placeholder="Comments" [(ngModel)]="comments"></textarea>
+        </mat-form-field>
+      </div>
+    </div>
+  </div>
+
+  <div class="inspection-edit-actions">
+    <button mat-raised-button (click)="clearInspection()">Clear</button>
+    <a [routerLink]=" ['/inspection/list'] "
+      mat-raised-button>Cancel</a>
+    <button mat-raised-button color="primary" (click)="updateInspection()">Save</button>
+  </div>
+</div>
+
