--- a/src/app/inspection/list/inspection.list.component.scss
+++ b/src/app/inspection/list/inspection.list.component.scss
@@ -20,7 +20,7 @@
   .mat-table {
     overflow: auto;
   }
-  
+
   .mat-header-cell {
     font-size: 14px;
     font-weight: 700;
@@ -43,7 +43,7 @@
   .result-icon {
     height: 25px;
     width: 25px;
-    background-color: none;
+    background-color: transparent;
     border-radius: 50%;
     margin-left: 24px;
     margin-right: 16px;
