--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,6 +2,7 @@
 /* This file is for setting global styles  */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import 'variables';
+@import 'material';
 
 body {
   margin: 0;
@@ -9,4 +10,8 @@ body {
 
 .spacer {
   flex: 1 1 auto;
+}
+
+.full-width {
+  width: 100%;
 }
