--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -2,14 +2,14 @@
   <!-- <a [routerLink]=" ['./'] "> -->
     <img [src]="logoUrl" height="100%" />
   <!-- </a> -->
-  <span>Global Regulatory Affairs</span>
+  <span>{{ 'Global Regulatory Affairs' | translate }}</span>
   <div class="spacer"></div>
   <div>
     <button mat-button class="btn-lang" [matMenuTriggerFor]="menu">
       <img [src]="langFlag" />
     </button>
     <mat-menu class="menu-lang" #menu="matMenu">
-      <button mat-menu-item class="btn-lang" (click)="handleChangeLang('uk')">
+      <button mat-menu-item class="btn-lang" (click)="handleChangeLang('en')">
         <img [src]="ukFlag" />
       </button>
       <button mat-menu-item class="btn-lang" (click)="handleChangeLang('es')">
