--- a/src/app/layout/nav/nav.component.scss
+++ b/src/app/layout/nav/nav.component.scss
@@ -9,5 +9,9 @@ nav {
     text-transform: uppercase;
     color: rgba(255, 255, 255, 0.85);
     padding: 8px 16px;
+
+    &.active {
+      background-color: rgb(82, 82, 88);
+    }
   }
 }
